src/components/overviewPanel/css/OverviewPanel.css
@font-face {
    font-family: "Icons";
    src:url('../fonts/overviewPanel-icons.eot?#iefix') format('embedded-opentype'),
         url('../fonts/overviewPanel-icons.eot'),
         url('../fonts/overviewPanel-icons.ttf');
}

@font-face {
    font-family: "Fluid-star";
    src:url('../fonts/fluid-star.eot?#iefix') format('embedded-opentype'),
         url('../fonts/fluid-star.eot'),
         url('../fonts/fluid-star.ttf');
}

@font-face {
    font-family: 'OpenSans';
    src: url('../fonts/OpenSans-Regular.ttf');
}

@font-face {
    font-family: 'OpenSans';
    src: url('../fonts/OpenSans-Bold.ttf');
    font-weight: bold;
}

@font-face {
    font-family: 'RobotoSlab';
    src: url('../fonts/RobotoSlab-Regular.ttf');
}

@font-face {
    font-family: 'RobotoSlab';
    src: url('../fonts/RobotoSlab-Bold.ttf');
    font-weight: bold;
}


.fl-overviewPanel-container {
    /*
     * APPLY this class on the container enclosing the overviewPanel component.
     * Customize these values to change the positioning.
     *
     * Note: If you change the position, you may have to change the position of
     * .fl-overviewPanel-hidden styles so that the transition goes in the desired
     * direction.
     */
    position:fixed;
    top:0;
    left:0;
    width:24em;
    z-index: 9999;
    font-size: 1em;
    font-family: "OpenSans","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
    height: 100%;
    min-height: 28em;

    /* Transition used to control hide/show of this container */
    transition: all 0.2s linear;
}

.fl-overviewPanel-container * {
    font-family: inherit;
}

.fl-overviewPanel .fl-overviewPanel-title {
    background-color: #333;
    font-family: 'RobotoSlab', serif;
    color: #ccc;
    padding: 0.5em 0.5em 0.5em 3em;
    height: 5.5em;
    position: absolute;
    top: 0;
    left: 0;
    line-height: 2em;
}

.fl-overviewPanel .fl-overviewPanel-title * {
    font-family: inherit;
}

.fl-overviewPanel .fl-overviewPanel-contents {
    /*
     * If changing the height of title or footer, make sure the top and bottom
     * positions of fl-overviewPanel-contents are adjusted.
     */
    top: 6.5em;     /* Change this if needed - offset the height of fl-overviewPanel-title + 1em (for line-height compensation).  */
    bottom: 18.5em; /* Change this if needed - offset the height of fl-overviewPanel-footer. */
    padding: 1.5em;
    position: absolute;
    overflow: auto;
}

.fl-overviewPanel .fl-overviewPanel-footer {
    height: 18.5em;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    line-height: 1em;
}


/* General styles */

.fl-overviewPanel {
    position: relative;
    left: 0;
    color: #fff;
    height: inherit;
}

.fl-overviewPanel h1 {
    margin: 0;
    font-size: 1.4em;
}

.fl-overviewPanel h2 {
    margin: 0;
    font-size: 1em;
}

.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
.fl-overviewPanel a:active,
.fl-overviewPanel a:focus {
    outline: 0.3em solid #27A9E1;
}

.fl-overviewPanel-group:after { /* clearfix (aka. group) */
    content: "";
    display: table;
    clear: both;
}

/* The Star icon that acts as a toggle button */

.fl-overviewPanel .fl-overviewPanel-icon-fluidStar {
    position:fixed;
    top:0.2em;
    left:0.2em;
    z-index: 1; /* Z-index and position relative is defined so it appears properly relative to the panel's title. */
    font-size: 1.5em;
}

.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
    text-decoration: none;
    font-family: "Fluid-star" !important; /* FLUID-5321: use important to keep learner prefs from changing it. */
    font-weight: normal !important; /* Keep UIO from changing the weight of icons. Bold icons look poor. */
    padding: 0.7em 0.3em;
    color: #FFCC00;
    float: left;
    position:relative;
    background-color: #333; /* IE8 */
    background-color: rgba(51,51,51,.96);
    line-height: 1.8em;
    transition: background-color 0.2s ease;
    outline: 0.2em solid #333;
    outline: 0.2em solid rgba(51,51,51,.96);
}

.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:hover {
    background-color: #444;
}

.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:before {
    content: "\e600";
}

/* The Demo Menu itself */
.fl-overviewPanel .fl-overviewPanel-body {
    background-color:#444; /* IE8 */
    background-color: rgba(51,51,51,.96);
    height: 100%;

    /* Fade out the overviewPanel contents. Otherwise it just disappears. */
    transition: visibility 0.1s linear;
    visibility:visible;
}

/* Demo Menu Visibility */

.fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-body {
    transition: visibility 0.1s linear;
    visibility: hidden;
}

.fl-overviewPanel-container.fl-overviewPanel-hidden {
    /* Make this container essentially hidden. Some dimensions need to be given to avoid a problem with rendering on Safari. */
    width: 0.01em;
    height: 0.01em;
    transition: all 0.2s linear; /* This transition creates the desired sliding effect. */
}


/* Header area with title */

.fl-overviewPanel .fl-overviewPanel-title h1 {
    display: inline-block;
    padding: 0.5em;
    margin-left: 0.2em;
}

.fl-overviewPanel .fl-overviewPanel-title a {
    text-decoration: none;
    color: #fff;
    transition: color 0.2s ease;
}

.fl-overviewPanel .fl-overviewPanel-title a:hover {
    color: #ffcc00;
}

/* Content area of the component */

.fl-overviewPanel .fl-overviewPanel-componentName {
    font-weight: bold;
    margin: 0.6em 0;
    display:block;
}

.fl-overviewPanel .fl-overviewPanel-componentVersion {
    font-style: italic;
}

.fl-overviewPanel .fl-overviewPanel-instructions {
    border: 0.2em solid #FFCC00;
    padding: 1em;
    margin-top: 2em;
}

.fl-overviewPanel .fl-overviewPanel-instructions h2 {
    text-transform: uppercase;
    font-weight: normal;
}

/* Icon links to code, API, and designs. */
.fl-overviewPanel .fl-overviewPanel-links {
    padding-top: 0.5em;
}
/* ... */

